# RBEngine

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: Animation.h.BE7539ADC6CF3226.idx  BaseXMLParser.cpp.86EFA0CD8FC625D8.idx  BaseXMLParser.h.918F5766F9D0E0BD.idx  BeaconSource.h.16F3FFFF3EE32F0B.idx  BlockContainer.cpp.819496573A65FDAB.idx  BlockContainer.h.00396CEF5C3F33D9.idx  BlockFormattingContext.cpp.FD1701503E1579AE.idx  BlockFormattingContext.h.96F85467611A1097.idx  Box.cpp.E0E2F2839E24C668.idx  Box.h.8AB5AC466AC0489E.idx  BoxShadowCache.cpp.8B580C657866B766.idx  BoxShadowCache.h.765945D07793492F.idx  BoxShadowHash.h.6BE2CF968129473C.idx  CallbackTexture.cpp.D027D1A902781B3C.idx  CallbackTexture.h.0629B5C19ECB7DE5.idx  Clock.cpp.BDC23D8338C7DF1C.idx  Clock.h.9B074893EE1F6913.idx  Colour.h.A31BD5AF54CBF178.idx  Colour.inl.AA14A06A3D490B90.idx  CommonSource.h.C63AFB20409354C5.idx  CompiledFilterShader.cpp.066D7C74EB31C935.idx  CompiledFilterShader.h.705078B98D3AE1BD.idx  ComputeProperty.cpp.1ACCB6E0DB4B5C07.idx  ComputeProperty.h.5E7644830A82E0E8.idx  ComputedValues.cpp.0D79F02C0FDEC01D.idx  ComputedValues.h.B556E956CBC7BB03.idx  Config.h.E38AF594062E461A.idx  ContainerBox.cpp.630888162D064D87.idx  ContainerBox.h.9F34B7E443F7F6F7.idx  Context.cpp.1EE8BCDC4792AADF.idx  Context.h.E7BB27CED457C6D3.idx  ContextInstancer.cpp.2C06FD4FEC64C198.idx  ContextInstancer.h.E029B27BA98B1BFC.idx  ContextInstancerDefault.cpp.C257586924950634.idx  ContextInstancerDefault.h.B54D77638F9E8DD2.idx  ControlledLifetimeResource.h.CEBBB8D7C1A52D8E.idx  ConvolutionFilter.cpp.7F07348CF918EDD3.idx  ConvolutionFilter.h.75FC6A943D427498.idx  Core.cpp.C09AD4B61450B417.idx  Core.h.C59237E5F8A2AA4A.idx  (+464 more)
assets/ui/: level1.rml  menu.rml
engine/: CMakeLists.txt  ImGuiLayer.h  TextureManager.cpp  TextureManager.h  UIManager.cpp  UIManager.h  components.h  ecs_world.cpp  ecs_world.h  engine.cpp  engine.h  entity.cpp  entity.h  glad.c  glad.h  physics.hpp
engine/ui/: RBRenderInterface.h  RBSystemInterface.h
src/: example.cpp  main.cpp  quickstart.cpp
